<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:clickable="true"
    android:id="@+id/main"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:focusable="true"
    android:onClick="clearInputFocus">

    <!--    Header Image -->

    <ImageView
        android:id="@+id/ivHeaderImage"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:scaleType="fitXY"
        android:src="@drawable/saad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--    Create Account Text -->

    <TextView
        android:id="@+id/tvCreateAcct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/register"
        android:textColor="@color/primaryPurple"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivHeaderImage" />

    <EditText
        android:id="@+id/etname"
        style="@style/form_background_style"
        android:layout_marginTop="32dp"
        android:drawableStart="@drawable/ic_action_name"
        android:ems="20"
        android:inputType="textPersonName"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreateAcct" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/form_background_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_action_email"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etname" />

    <EditText
        android:id="@+id/etPhone"
        style="@style/form_background_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_action_phone"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <Spinner
        android:id="@+id/spGender"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:entries="@array/gender"
        android:paddingStart="46dp"
        style="@style/form_background_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhone" />

    <ImageView
        android:id="@+id/ivGender"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/spGender"
        app:layout_constraintStart_toStartOf="@+id/spGender"
        app:layout_constraintTop_toTopOf="@+id/spGender"
        android:src="@drawable/male_and_female" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/botton_style"
        android:fontFamily="@font/roboto"
        android:text="@string/submit"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spGender"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>